fixed exra margin on mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -392,15 +392,20 @@ code {
   display: flex;
   flex-shrink: 2;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
   background-size: cover;
   background-image: url('https://res.cloudinary.com/dkkwdvec2/image/upload/v1649778612/Triangle_Accents_dxoaun.png');
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   border-top: 4px solid rgba(14, 51, 80, 0.3);;
 }
 
-
+a.item.navButton {
+  max-width: 100vw;
+  /* padding-right: 0px !important; */
+  margin: 0px !important;
+}
 
 .jobScrollArea {
   display: flex;
